Update index.html with simple calculator

--- a/index.html
+++ b/index.html
@@ -5,5 +5,29 @@
 </head>
 <body>
     <h1>Simple Calculator</h1>
+
+    <div>
+        <input type="text" id="result" readonly>
+        <button onclick="clear()">
+C</button>
+        <button onclick="display('1')">1
+</button>
+        <button onclick="display('2')">2
+</button>
+        <button onclick="display('3')">3
+</button>
+        <button onclick="display('4')">4
+</button>
+        <button onclick="display('5')">5</button>
+
+    <script>
+        function clear() {
+            document.getElementById('result').value = "";
+        }
+
+        function display(value) { 
+            document.getElementById('result').value += value;
+        }
+    </script>
 </body>
 </html>
