Add plus and minus buttons to calculator

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ C</button>
 </button>
         <button onclick="display('5')">5</button>
 
+        <button onclick="display('+')">+</button>
+        <button onclick="display('-')">-</button>
+
     <script>
         function clear() {
             document.getElementById('result').value = "";
