Update index.html with equals button for calculations

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ C</button>
         <button onclick="display('+')">+</button>
         <button onclick="display('-')">-</button>
 
+        <button onclick="evaluate()">=</button>
+
     <script>
         function clear() {
             document.getElementById('result').value = "";
