--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button onclick="display('+')">+</button>
         <button onclick="display('-')">-</button>
 
-        <button onclick="evaluate()">=</button>
+        <button onclick="calculate()">=</button>
 
         <script>
             function clearResult() {
@@ -29,7 +29,7 @@
                 document.getElementById('result').value += value;
             }
 
-            function evaluate() {
+            function calculate() {
                 try {
                     document.getElementById('result').value = eval(document.getElementById('result').value);
                 } catch (err) {
